# MPCVideoDec-fork

./: MPCVideoDec.sln  README.md  build.bat
.github/workflows/: decoder-release.yml
include/: Version.h  mvrInterfaces.h
scripts/: Install_MPCVideoDec-fork_64.cmd  Uninstall_MPCVideoDec-fork_64.cmd
src/: common.props
src/DSUtil/: Log.h  Profile.cpp  VideoParser.cpp  WinAPIUtils.cpp  ffmpeg_log.h
src/ExtLib/ffmpeg/: config_components.h  ffmpeg.mak
src/ExtLib/ffmpeg/libavcodec/: codec_list.c
src/apps/MPCVideoDecSettings/: App.xaml  App.xaml.cs  MPCVideoDecSettings.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
src/apps/MPCVideoDecSettings/Services/: MPCVideoDecRegistry.cs  StatusShareReader.cs
src/apps/MPCVideoDecSettings/ViewModels/: SettingsViewModel.cs
src/apps/MPCVideoDecSettingsQt/: CMakeLists.txt  MPCVideoDecRegistry.h  MainWindow.cpp  MainWindow.h  main.cpp
src/filters/filters/: DarkMode.cpp  DarkMode.h  Filters.cpp  Filters.vcxproj  Filters.vcxproj.filters  InternalPropertyPage.cpp  InternalPropertyPage.h
src/filters/transform/MPCVideoDec/: FormatConverter.cpp  MPCVideoDec.cpp  MPCVideoDec.h  MPCVideoDec.rc  MPCVideoDec.vcxproj  MPCVideoDecSettingsWnd.cpp  MPCVideoDecSettingsWnd.h  MPCVideoDecStatusShare.h  stdafx.cpp
src/filters/transform/MPCVideoDec/pixconv/: yuv2yuv_unscaled.cpp
